<resources>
    <string name="app_name">May tính bỏ túi</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="number0">0</string>
    <string name="sao">*</string>
    <string name="cong">+</string>
    <string name="tru">-</string>
    <string name="nhan">x</string>
    <string name="chia">:</string>
    <string name="xoa">CE</string>
    <string name="xoahet">C</string>
    <string name="thang">#</string>
    <string name="bang">=</string>
</resources>
