<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#0C0C0C"

            />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="5"
    android:orientation="vertical"
    android:id="@+id/khung_so"
    android:weightSum="12"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="10"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_1"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number1"
            android:textSize="30sp"
            android:layout_weight="2"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number2"
            android:textSize="30sp"
            android:layout_weight="2"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_3"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number3"
            android:textSize="30sp"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_xoa"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/xoa"
            android:textSize="30sp"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_xoahet"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/xoahet"
            android:textSize="30sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="10"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_4"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number4"
            android:textSize="30sp"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_5"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number5"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_6"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number6"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn_cong"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/cong"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn_tru"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/tru"
            android:textSize="30sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="10"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_7"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number7"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_8"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number8"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_9"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number9"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn_nhan"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/nhan"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn_chia"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/chia"
            android:textSize="30sp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:weightSum="10"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_sao"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/sao"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_0"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/number0"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/thang"
            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"

            android:textSize="30sp"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/btn_bang"
            android:layout_weight="2"
            android:background="@drawable/backgroundbutton"
            android:textColor="#EC1717"
            android:textStyle="bold"
            android:text="@string/bang"
            android:textSize="30sp"
            />

    </LinearLayout>
</LinearLayout>

</LinearLayout>